<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/MainHeadline"
        android:layout_width="210dp"
        android:layout_height="43dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/kaffe_bestellen"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/tischnummer"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainHeadline" />

    <Button
        android:id="@+id/btnWeiter"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:text="@string/weiter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTnumber" />

</android.support.constraint.ConstraintLayout>